Fixed text-wrap in side nav

--- a/css/electrode.scss
+++ b/css/electrode.scss
@@ -200,7 +200,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 14px;
   // position: fixed;
   float: left;
-  width: 210px;
+  width: 214px;
 
   ul {
     list-style: none;
